+ Fixed message display layout problems
git-svn-id: http://agilefant.googlecode.com/svn/trunk@3110 29784df9-99d5-7e28-3e6c-ac1830307ffc

--- a/web/static/css/IE7styles.css
+++ b/web/static/css/IE7styles.css
@@ -9,3 +9,11 @@
 li.dynamictable-captionaction {
   margin: -1.5em 1em 0 0 !important;
 }
+
+ul.dynamicsMessageContainer {
+  width: auto;
+}
+
+ul.dynamicsMessageContainer li {
+  float: none;
+}
