--- a/web/static/css/dynamics.messages.css
+++ b/web/static/css/dynamics.messages.css
@@ -9,7 +9,7 @@ ul.dynamicsMessageContainer {
   top: 150px;
   z-index: 1500;
   height: 0;
-  width: auto;
+  width: 0;
 }
 
 ul.dynamicsMessageContainer li {
@@ -31,6 +31,7 @@ li.genericMessage {
   max-width: 700px;
   min-width: 100px;
   overflow: hidden;
+  width: auto;
 }
 
 li.okMessage {
